@@ -1,3 +1,9 @@
+2009-04-06  Ben Abbott <bpabbott@mac.com>
+
+	* plot/__gnuplot_default_font__.m: Remove file from archive.
+	* plot/__go_draw_axes__.m, plot/__go_draw_figure__.m: Allow
+	fontsize to be specified for all terminals with fontname == "*".
+
 2009-04-06  Jaroslav Hajek <highegg@gmail.com>
 
 	* polynomial/polyscale.m: New function.
